objects/Account.object
<CustomObject>
    <fields>
        <fullName>CAGE__c</fullName>
        <label>CAGE</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <label>DUNS</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disabled_Veteran_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled Veteran-Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disadvantaged_Women_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disadvantaged Women-Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disadvantaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disadvantaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary contact for this account, select from the list of available contacts for this account.</inlineHelpText>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <infoMessage>Please select a primary contact from the list of available contacts for this account</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Firm_ID__c</fullName>
        <description>EHB Firm ID</description>
        <externalId>true</externalId>
        <label>Firm ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Type__c</fullName>
        <description>Firm Types</description>
        <label>Firm Type</label>
        <picklist>
            <picklistValues>
                <fullName>NASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-NASA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hubzone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hubzone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veteran_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veteran-Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Woman_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Woman-Owned</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Firms</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>